--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
+    "toastify-js": "^1.11.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
